# etherium-fetcher

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
migrations/2024-06-30-115718_create_tables/: down.sql  up.sql
src/: auth.rs  integration_tests.rs  main.rs  routes.rs  schema.rs  transaction.rs  users.rs
