[package]
name = "ethereum-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.20.2"
dotenv = "0.15"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"]}
diesel_migrations = "2.2"
ethereum-rlp = "0.2.3"
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
ctor = "0.2.8"
